src/components/lyne-footer/styles/lyne-footer.component.scss
// Default component properties, defined for :host. Properties which can not
// travel the shadow boundary are defined through this mixin, available for shared
// and default mode
@include host-component-properties;

:host {
  // Reminder: --footer-gap-horizontal needs a new responsive gap design token
  // var(--spacing-responsive-s); is just a placeholder for now
  --footer-gap-horizontal: var(--spacing-responsive-s);
  --footer-gap-vertical: var(--spacing-responsive-l);
}

.footer {
  @include page-spacing;
  margin-block-start: pxToRem(var(--spacing-responsive-l));
  padding-block-start: pxToRem(var(--spacing-responsive-l));
  padding-block-end: pxToRem(var(--spacing-responsive-l));
}

.footer--primary {
  background-color: var(--color-milk-default);
}

.footer--primary-negative {
  color: white;
}

.title--visually-hidden {
  @include screenReaderOnly();
}

.columns {
  // Reset
  width: 100%;
  padding: 0;
  margin: 0;

  @include page-spacing__inner;
  display: flex;
  flex-wrap: wrap;
  column-gap: pxToRem(var(--footer-gap-horizontal));
  row-gap: pxToRem(var(--footer-gap-vertical));

  ::slotted( [slot] ) {
    flex-basis: 100%;
    //border: 1px solid var(--color-cloud-default);

    @include mq($from: small) {
      flex: 0 0 calc(50% - (#{pxToRem(var(--footer-gap-horizontal))}/2));
      //flex: 0 0 calc(50% - (#{pxToRem(var(--footer-gap-horizontal))}/2) - 2px);
    }
    @include mq($from: wide) {
      flex: 0 0 calc(25% - ((3*#{pxToRem(var(--footer-gap-horizontal))})/4));
      //flex: 0 0 calc(25% - ((3*#{pxToRem(var(--footer-gap-horizontal))})/4) - 2px);
    }
  }
  ::slotted( [slot='clock']) {
    max-width: 76px;
    @include mq($from: zero) {
      order: -1;
    }
    @include mq($from: small) {
      max-width: 112px;
      order: initial;
    }
    @include mq($from: wide) {
      margin-left: auto;
    }
  }
}

.bottom {
  @include page-spacing__inner;
}

* + .bottom {
  margin-block-start: pxToRem(var(--spacing-responsive-xl));
  border-block-start: 1px solid var(--color-cloud-default);
  padding-block-start: pxToRem(var(--spacing-fixed-8x));
}

